--- a/WebAppv1/Views/Fictions/Edit.cshtml
+++ b/WebAppv1/Views/Fictions/Edit.cshtml
@@ -10,31 +10,61 @@
 <h4>Fiction</h4>
 <hr />
 <div class="row">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Title" class="mdc-text-field mdc-text-field--filled">
-                    <span class="mdc-text-field__ripple"></span>
-                    <span class="mdc-floating-label" id="my-label">Title</span>
-                    <input asp-for="Title" class="mdc-text-field__input" aria-labelledby="my-label">
-                    <span class="mdc-line-ripple"></span>
-                </label>
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Author" class="mdc-text-field mdc-text-field--filled">
-                    <span class="mdc-text-field__ripple"></span>
-                    <span class="mdc-floating-label" id="my-label">Author</span>
-                    <input asp-for="Author" class="mdc-text-field__input" aria-labelledby="my-label">
-                    <span class="mdc-line-ripple"></span>
-                </label>
-                <span asp-validation-for="Author" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+    <form asp-action="Edit">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <input type="hidden" asp-for="Id" />
+        <div class="form-group">
+            <label asp-for="Title" class="mdc-text-field mdc-text-field--filled">
+                <span class="mdc-text-field__ripple"></span>
+                <span class="mdc-floating-label" id="my-label">Title</span>
+                <input asp-for="Title" class="mdc-text-field__input" aria-labelledby="my-label">
+                <span class="mdc-line-ripple"></span>
+            </label>
+            <span asp-validation-for="Title" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Author" class="mdc-text-field mdc-text-field--filled">
+                <span class="mdc-text-field__ripple"></span>
+                <span class="mdc-floating-label" id="my-label">Author</span>
+                <input asp-for="Author" class="mdc-text-field__input" aria-labelledby="my-label">
+                <span class="mdc-line-ripple"></span>
+            </label>
+            <span asp-validation-for="Author" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Author" id="authorField" class="mdc-text-field mdc-text-field--filled">
+                <span class="mdc-text-field__ripple"></span>
+                <span class="mdc-floating-label" id="author-label">Author</span>
+                <input asp-for="Author" class="mdc-text-field__input" aria-labelledby="author-label">
+                <span class="mdc-line-ripple"></span>
+            </label>
+            <span asp-validation-for="Author" class="text-danger"></span>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="Description" id="authorField" class="mdc-text-field mdc-text-field--filled">
+                <span class="mdc-text-field__ripple"></span>
+                <span class="mdc-floating-label" id="description-label">Description</span>
+                <input asp-for="Description" class="mdc-text-field__input" aria-labelledby="description-label">
+                <span class="mdc-line-ripple"></span>
+            </label>
+            <span asp-validation-for="Description" class="text-danger"></span>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="FictionType" class="control-label"></label>
+            <select asp-for="FictionType" class="form-control">
+                <option value="Action">Action</option>
+                <option value="Fantasy">Fantasy</option>
+                <option value="Adventure">Adventure</option>
+                <option value="Comedy">Comedy</option>
+            </select>
+            <span asp-validation-for="FictionType" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <input type="submit" value="Save" class="btn btn-primary" />
+        </div>
+    </form>
 </div>
 
 <div>
