--- a/WebAppv1/Views/Fictions/Index.cshtml
+++ b/WebAppv1/Views/Fictions/Index.cshtml
@@ -19,6 +19,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.Author)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FictionType)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Description)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -32,8 +38,14 @@
                 @Html.DisplayFor(modelItem => item.Author)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.FictionType)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a>
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
